[metadata]
name = signalrclient
version = attr: signalrclient.__version__
url = https://github.com/koheishoji/signalrclient
author = Kohei Shoji
author_email = shoji.kohei@anahub.co.jp
license = MIT
license_files = LICENSE
description = signalrclient: Simple SignalR client for Python
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
  websocket-client
